Test con arquillian