@@ -260,7 +260,32 @@
                 
                  
             </plugin>
-            
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>3.0.0-M5</version>
+                <executions>
+                    <execution>
+                        <id>integration-test</id>
+                        <goals>
+                            <goal>integration-test</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>verify</id>
+                        <goals>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <argLine>-Xmx2048m -Xmx2048m --illegal-access=permit</argLine>
+                    <systemProperties>
+                        <arquillian.launch>payara-embedded</arquillian.launch>
+                    </systemProperties>
+                    <reuseForks>false</reuseForks>
+                </configuration>
+            </plugin>
      
         </plugins>
     </build>
